--- a/Resources/Prototypes/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/Voice/speech_emotes.yml
@@ -357,6 +357,29 @@
    - gasped!
 
 - type: emote
+  id: Cough
+  name: chat-emote-name-cough
+  category: Vocal
+  icon: Interface/Emotes/cough.png
+  whitelist:
+    components:
+    - Vocal
+  blacklist:
+    components:
+    - BorgChassis
+  chatMessages: ["chat-emote-msg-cough"]
+  chatTriggers:
+    - cough
+    - coughs
+    - coughed 
+    - cough.
+    - coughs.
+    - coughed.
+    - cough!
+    - coughs!
+    - coughed!
+
+- type: emote
   id: DefaultDeathgasp
   name: chat-emote-name-deathgasp
   icon: Interface/Emotes/deathgasp.png
