--- a/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/candy.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/candy.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent: FoodBase
   id: FoodLollipop
-  name: lollipop
+  name: lollipoop
   description: For being such a good sport.
   components:
   - type: SolutionContainerManager
