Increase chance for just basic cig

--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/smokables.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/smokables.yml
@@ -14,6 +14,8 @@
   - type: RandomSpawner
     prototypes:
       - Cigarette
+      - Cigarette
+      - Cigarette
       - Cigar
       - CigPackGreen
       - CigPackRed
