Fix Typo for Lollipop + Fix Borito Pie

--- a/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/snacks.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/snacks.yml
@@ -214,7 +214,8 @@
     sprite: Nyanotrasen/Objects/Consumable/Food/Snacks/boritopie.rsi
     state: borito-pie
   - type: Food
-    trash: FoodPacketBoritosTrash
+    trash: 
+    - FoodPacketBoritosTrash
   - type: SolutionContainerManager
     solutions:
       food:
