Fix Mothsquaking Fry

--- a/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/snacks.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Objects/Consumable/Food/snacks.yml
@@ -12,7 +12,8 @@
       - tofu
       - leafy
   - type: Food
-    trash: FoodPlateSmall
+    trash: 
+    - FoodPlateSmall
   - type: Sprite
     sprite: Nyanotrasen/Objects/Consumable/Food/Snacks/moth.rsi
     state: squeakingstirfry
