--- a/Resources/Prototypes/Catalog/Fills/Books/bookshelf.yml
+++ b/Resources/Prototypes/Catalog/Fills/Books/bookshelf.yml
@@ -25,7 +25,7 @@
       - id: BookTheBookOfControl
     # Handwritten books
     - !type:GroupSelector
-      amount: !type:RangeNumberSelector
+      rolls: !type:RangeNumberSelector
         range: 0, 2
       children:
       - id: BookAurora
