--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/leaves.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/leaves.yml
@@ -24,6 +24,8 @@
     entries:
       burger:
         name: food-sequence-burger-content-cannabis
+      taco:
+        name: food-sequence-content-cannabis
 
 
 - type: entity
@@ -51,6 +53,8 @@
     entries:
       burger:
         name: food-sequence-burger-content-cannabis
+      taco:
+        name: food-sequence-content-cannabis
 
 - type: entity
   name: ground cannabis
@@ -118,6 +122,8 @@
     entries:
       burger:
         name: food-sequence-burger-content-rainbow-cannabis
+      taco:
+        name: food-sequence-content-rainbow-cannabis
 
 - type: entity
   name: dried rainbow cannabis leaves
