--- a/Resources/Prototypes/GameRules/midround.yml
+++ b/Resources/Prototypes/GameRules/midround.yml
@@ -20,7 +20,7 @@
     - prefRoles: [ Thief ]
       max: 3
       playerRatio: 15
-      role: RoleTypeThief
+      roleType: SoloAntagonist
       lateJoinAdditional: true
       allowNonHumans: true
       multiAntagSetting: NotExclusive
