--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/maintenance.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/maintenance.yml
@@ -242,6 +242,8 @@
           weight: 0.5
         - id: ClothingHandsGlovesColorYellow
           weight: 1
+        - id: ClothingHandsGlovesConducting
+          weight: 1
       # Uncommon Group
     - !type:GroupSelector
       weight: 23
