--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -1675,6 +1675,16 @@
   - type: FireVisuals
     sprite: Mobs/Effects/onfire.rsi
     normalState: Mouse_burning
+  - type: FoodSequenceElement
+    sprite:
+      sprite: Mobs/Animals/mouse.rsi
+      state: dead-0
+    entries:
+      burger:
+        name: food-sequence-burger-content-rat
+      taco:
+        name: food-sequence-content-rat
+
 
 - type: entity
   parent: MobMouse
@@ -1731,6 +1741,10 @@
   - type: Item
     size: Tiny
     heldPrefix: 1
+  - type: FoodSequenceElement
+    sprite:
+      sprite: Mobs/Animals/mouse.rsi
+      state: dead-1
 
 - type: entity
   parent: MobMouse
@@ -1760,6 +1774,10 @@
   - type: Item
     size: Tiny
     heldPrefix: 2
+  - type: FoodSequenceElement
+    sprite:
+      sprite: Mobs/Animals/mouse.rsi
+      state: dead-2
 
 - type: entity
   name: cancer mouse
