--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/burger.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/burger.yml
@@ -46,6 +46,8 @@
     maxLayers: 20
     startPosition: 0, 0
     offset: 0, 0.1
+    minLayerOffset: -0.05, 0
+    maxLayerOffset: 0.05, 0
     nameGeneration: food-sequence-burger-gen
   - type: Appearance
   - type: SolutionContainerManager
