--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -1684,6 +1684,11 @@
         name: food-sequence-burger-content-rat
       taco:
         name: food-sequence-content-rat
+      skewer:
+        name: food-sequence-content-rat
+        sprite: 
+          sprite: Objects/Consumable/Food/skewer.rsi
+          state: skewer-rat
 
 
 - type: entity
