--- a/Resources/Prototypes/Roles/Jobs/Civilian/musician.yml
+++ b/Resources/Prototypes/Roles/Jobs/Civilian/musician.yml
@@ -17,6 +17,7 @@
   - !type:RemoveComponentSpecial # GreyStation
     components:
     - type: InstrumentWhitelist
+      whitelist: null
 
 - type: startingGear
   id: MusicianGear
