--- a/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_percussion.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_percussion.yml
@@ -26,6 +26,9 @@
   - type: Sprite
     sprite: Objects/Fun/Instruments/musicbox.rsi
     state: icon
+  - type: Tag # GreyStation
+    tags:
+    - BasicInstrument
 
 - type: entity
   parent: BaseHandheldInstrument
