--- a/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_wind.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_wind.yml
@@ -73,6 +73,7 @@
     inHandsOnly: false  
   - type: Tag
     tags:
+    - BasicInstrument # GreyStation
     - WoodwindInstrument
 
 - type: entity
