--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -309,7 +309,8 @@
   table: !type:AllSelector
     children:
     - id: BolaEnergy
-      amount: 2
+      amount: !type:ConstantNumberSelector
+        value: 2
     - id: BookSecretDocuments
     - id: BookSpaceLaw
     - id: BoxEncryptionKeySecurity
