Added base cell system

--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -1519,6 +1519,9 @@
   components:
   - type: Body
     prototype: Mouse
+  - type: CellGeneration
+    cells:
+      - MurineCells
   - type: GhostRole
     makeSentient: true
     allowSpeech: true
