Added functionality to biopsy & added raw dish

--- a/Resources/Prototypes/Entities/Objects/Specific/Xenobiology/biopsy.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Xenobiology/biopsy.yml
@@ -4,11 +4,21 @@
   name: biopsy tool
   description: Used to retrieve cell lines from organisms. Don't worry, it won't sting.
   components:
-    - type: Sprite
-      sprite: Objects/Specific/Xenobiology/biopsy.rsi
+  - type: Appearance
+  - type: GenericVisualizer
+    visuals:
+      enum.CellCollectorVisuals.State:
+        enum.CellCollectorVisuals.Layer:
+          True:
+            state: icon
+          False:
+            state: icon-full
+  - type: Sprite
+    sprite: Objects/Specific/Xenobiology/biopsy.rsi
+    layers:
+    - map: ["enum.CellCollectorVisuals.Layer"]
       state: icon
-    - type: Item
-      sprite: Objects/Specific/Xenobiology/biopsy.rsi
-    - type: CellCollector
-    - type: UseDelay
-      delay: 3
+  - type: Item
+    sprite: Objects/Specific/Xenobiology/biopsy.rsi
+  - type: CellCollector
+  - type: CellContainer
