--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/maintenance.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/maintenance.yml
@@ -162,6 +162,114 @@
       - id: ClothingUniformJumpsuitFamilyGuy
       - id: WristwatchGold
 
+- type: entityTable
+  id: MaintToolsTable
+  table: !type:GroupSelector
+    children:
+    # Common Group
+    - !type:GroupSelector
+      weight: 75
+      children:
+      - id: FlashlightLantern
+      - id: ToolboxEmergencyFilled
+      - !type:GroupSelector
+        children:
+        - id: OxygenTankFilled
+        - id: DoubleEmergencyOxygenTankFilled
+      - !type:GroupSelector
+        children:
+        - id: NitrogenTankFilled
+        - id: DoubleEmergencyNitrogenTankFilled
+      - id: EmergencyFunnyOxygenTankFilled
+        weight: 0.5
+      - !type:GroupSelector
+        weight: 3
+        children:
+        - id: SheetSteel10
+        - id: SheetPlastic10
+        - id: SheetGlass10
+        - id: PartRodMetal10
+        - id: MaterialCardboard10
+          weight: 0.25
+        - id: MaterialCloth10
+          weight: 0.25
+        - id: MaterialWoodPlank10
+          weight: 0.25
+      - id: Plunger
+      - id: PowerCellMedium
+      - id: PowerCellSmall
+      - id: Soap
+      - id: Wirecutter
+      - id: Screwdriver
+      - id: Wrench
+      - id: Crowbar
+      - id: Multitool
+      - id: Shovel
+      - id: Welder
+      - id: GasAnalyzer
+      - id: SprayPainter
+      - id: Flare
+      - id: Beaker
+      - id: ClothingMaskGas
+      - id: ClothingMaskBreath
+      - id: DoorElectronics
+      - id: APCElectronics
+      - id: InflatableWallStack5
+      - id: CableHVStack10
+      - id: CableMVStack10
+      - id: CableApcStack10
+      - !type:GroupSelector
+        children:
+        - id: ClothingHandsGlovesColorYellowBudget
+          weight: 5
+        - id: ClothingHandsGlovesFingerlessInsulated
+          weight: 0.5
+        - id: ClothingHandsGlovesColorYellow
+          weight: 1
+      # Uncommon Group
+    - !type:GroupSelector
+      weight: 23
+      children:
+      - id: ClothingHeadHatCone
+        weight: 2
+      - id: BookRandomStory
+        weight: 0.25
+      - id: ToolboxElectricalFilled
+      - id: ToolboxMechanicalFilled
+      - id: ClothingBeltUtility
+      - id: ToolboxArtisticFilled
+      - id: GeigerCounter
+      - id: trayScanner
+      - id: HandheldGPSBasic
+      - id: HandLabeler
+      - id: GlowstickBase
+      - id: Bucket
+      - id: RadioHandheld
+      - id: AppraisalTool
+      - id: ModularReceiver
+      - id: WeaponFlareGun
+      - id: BarberScissors
+      - !type:GroupSelector
+        children:
+        - id: DrinkSpaceGlue
+        - id: DrinkSpaceLube
+      # Rare Group
+    - !type:GroupSelector
+      weight: 2
+      children:
+      - id: LanternFlash
+      - id: PowerCellHigh
+      - id: NetProbeCartridge
+      - id: WelderIndustrial
+      - id: SheetPlasteel10
+      - id: ClothingMaskGasExplorer
+      - id: TechnologyDisk
+      - id: ResearchDisk5000
+      - id: PetCarrier
+      - id: DrinkMopwataBottleRandom
+      - id: LidSalami
+        weight: 0.05
+
 - type: entity
   name: Maint Loot Spawner
   suffix: Fluff+Clothes
