Removed botany specific components/system, moved to generic DamageOnPickup. Added code comments. Extra checks in component for whether to toss an item, damage an entity. Still WIP.

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -251,11 +251,14 @@
   - type: Extractable
     grindableSolutionName: food
   - type: DamageOnPickup
-    sound: /Audio/Effects/lightburn.ogg
+    failsound: /Audio/Effects/lightburn.ogg
+    takedamage: true
     damage:
       types:
         Heat: 4
         Caustic: 4
+    throw: true
+    throwspeed: 10
 
 
 - type: entity
